# AI_for_Business_Prognosis

./: .gitignore  Implementing_STL.ipynb  README.md  README_PatchTST.md  References.md  pyproject.toml  stl_student_exercise_loesung.ipynb
Gold_Price_Prognosis/: Gold_Price_Notebook_Summary.md  README.md  summary.md
Gold_Price_Prognosis/configs/: dashboard.yaml  data.yaml  experiments.yaml  models.yaml
Gold_Price_Prognosis/dashboard/: README.md  app.py
Gold_Price_Prognosis/notebooks/: gold_price_forecasting.ipynb
Gold_Price_Prognosis/scripts/: download_data.py  launch_dashboard.py  launch_mlflow.py  run_future_forecast.py  run_holdout_experiment.py
Gold_Price_Prognosis/tests/: conftest.py  test_cache.py  test_data_validation.py  test_display.py  test_end_to_end_quick.py  test_experiments_error_by_day.py  test_hashing.py  test_hpo.py  test_interactive_plots.py  test_metrics.py  test_models_smoke.py  test_no_leakage.py  test_plotting.py  test_rolling.py  test_splitting.py  test_trading.py  test_utf8.py
PatchTST/: PatchTST_Beispiel_Training.ipynb  PatchTST_Beispiel_Training_Traffic.ipynb  PatchTST_Implementierung.ipynb  README_PatchTST.md  Trainingsoutput_Etth1_100.ipynb
PatchTST/Lern_Notebook/: PatchTST_Implementierung.ipynb  patchtst_teaching_notebook.ipynb
PatchTST/Training_Examples/: PatchTST_Trainingsoutput_Traffic_100.ipynb  PatchTST_Trainingsoutput_Traffic_100.json
PatchTST/Uebung_Notebook/: PatchTST_student_exercise.ipynb  PatchTST_student_loesung.ipynb  model_context_168_pred_24.pt  model_context_168_pred_48.pt  model_context_336_pred_48.pt
Projekt/: ProjektReadme.md
Projekt/Data/: goldpreis_seit_2000.csv
Projekt/Notebooks/: 0_ARIMA_ohne_EXO.ipynb  (+9 more)
STL/: stl_crispdm_step_by_step_de.ipynb  stl_method_airpassengers_example.ipynb
(+339 files in other folders)
