[project]
name = "ai-for-business-prognosis"
version = "0.1.0"
description = "Notebook environment for STL decomposition of the AirPassengers dataset."
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.8.0",
    "pandas>=2.2.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.0",
    "yfinance>=1.4.1",
]

[tool.uv]
package = false
