[project]
name = "ai-for-business-prognosis"
version = "0.1.0"
description = "Educational forecasting environment for STL, PatchTST, and reproducible gold-price forecasting."
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.8.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.0",
    "torch>=2.3.0",
    "yfinance>=1.4.1",
    "pyarrow>=16.0.0",
    "pyyaml>=6.0.1",
    "tqdm>=4.66.0",
    "mlflow>=2.14.0",
    "streamlit>=1.36.0",
    "plotly>=5.22.0",
    "pytest>=8.2.0",
    "jupyter>=1.0.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["Gold_Price_Prognosis/src"]
testpaths = ["Gold_Price_Prognosis/tests"]
